<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Jidelak</string>
    <string name="action_settings">Settings</string>
    <string name="action_update">Update</string>
    <string name="open">Open:</string>
    <string name="download_failed">Failed to download data</string>
    <string name="unable_to_parse">Data not parsable</string>
    <string name="parser_configuration_error">Parser configuration error</string>
    <string name="data_updated">Data updated</string>
    <string name="import_failed">Data import failed: </string>
    <string name="source_malformed_url">URL "%s" in source is invalid</string>
    <string name="first_day_of_week_malformed">%3$s: First day of week in source does not match format %1$s.</string>
    <string name="meal_invalid_date_format">%3$s: Date "%2$s" in meal does not match format %1$s.</string>
    <string name="meal_invalid_integer_format">%1$s: Day in &lt;meal&gt; "%5$s" not integer.</string>
    <string name="opening_hours_invalid_date">%3$s: Date "%2$s" in opening hours does not match format %1$s.</string>
    <string name="opening_hours_invalid_day_of_week">%3$s: Day of week "%2$s" in opening hours does not match format %1$s.</string>
    <string name="unexpected_exception">Unexpected exception ocured - see error log</string>
    <string name="parser_configuration_exception">Parser configuration is damaged. See error log</string>
    <string name="transformer_configuration_exception">Transformer configuration is damaged. See error log</string>
    <string name="transformer_factory_configuration_exception">Transformer factory configuration is damaged. See error log</string>
    <string name="transformer_exception">Error ocured when parsing source. See error log</string>
    <string name="feeder_io_exception">Unable to load data. Check your internet connection.</string>
    <string name="importing_template">Importing template %s&#8230;</string>
    <string name="import_template_question">Are you sure to import template %s?</string>
    <string name="http_error_response">Server returned code %1$s: %2$s</string>
    <string name="no_menu">No menu available</string>
    <string name="call">Call</string>
    <string name="delete">Delete</string>
    <string name="locate">Locate</string>
    <string name="delete_restaurant">Delete restaurant %s?</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="unable_to_get_location">Unable to get location</string>
    <string name="action_reorder_restaurants">Reorder</string>
    <string name="versionName">Version:</string>
    <string name="versionString">%1$s (code: %2$d)</string>
    <string name="action_about">About</string>
    <string name="other_actions">Other</string>
    <string name="last_updated">Last updated</string>
    <string name="breakfast">Breakfast</string>
    <string name="snack">Snack</string>
    <string name="starter">Starter</string>
    <string name="soup">Soup</string>
    <string name="dinner">Dinner</string>
    <string name="trimmings">Trimmings</string>
    <string name="desert">Desert</string>
    <string name="lunch">Lunch</string>
    <string name="supper">Supper</string>
    <string name="drink">Drinks</string>
    <string name="wine">Wine</string>
    <string name="refresh_period_description">Time after which data will be updated.</string>
    <string name="refresh_period_title">Update period</string>
    <string name="update_time_title">Update time</string>
    <string name="update_time_description">Time at which data will be updated.</string>
    <string name="category_background_title">Colorize background by category</string>
    <string name="category_background_description">When enabled, backgrounds of known categories will be highlighted by colors</string>
    <string name="send_to">Share</string>
    <string name="send_error">Send Error</string>
    <string name="unsupported_protocol">Unsupported protocol</string>
    <string name="malformed_url">URL "%s" is invalid</string>
    <string name="only_wifi_title">Download on WiFi only</string>
    <string name="only_wifi_description">Don\'t download background data over 3G networks. Use WiFi only. If you update data manually, it will be downloaded even over mobile network.</string>
    <string name="delete_delay_title">Delete after</string>
    <string name="delete_delay_description">Records older than this period will be deleted.</string>
    <string name="never">never</string>
    <string name="update_already_running">Upate already running</string>
    <string name="template_version">Template version</string>
    <string name="last_modified">Imported</string>
    <string name="code">Code</string>
    <string name="other">Other</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="avail_from">from</string>
    <string name="avail_to">to</string>
    <string name="closed">closed</string>
    <string name="opening_hours">Opening hours</string>
    <string name="contact">Contact</string>
    <string name="activity_not_found">Activity not found for URL "%s"</string>
    <string name="android_version">System version</string>
    <string name="android_code">System code</string>
    <string name="date_time">%1$s in %2$s</string>
    <string name="menu">Menu</string>
    <string name="no_restaurants">No restaurants available</string>
    <string name="invalid_dish">%1$s: dish %5$s is not known (%3$s)</string>
    <string name="update_on_particular_time_title">Update on particular time</string>
    <string name="update_on_particular_time_description">If enabled, updates will be performed on selected time. Otherwise data will be updated on selected interval.</string>
    <string name="update_automatically_title">Automatic updates on backgroud</string>
    <string name="update_automatically_description">If active, data will be updated automatically on the background based on your update plan.</string>
    <string name="update_title">Data updating</string>

    <string-array name="weeks">
        <item>weeks</item>
        <item>week</item>
        <item>weeks</item>
    </string-array>
    <string-array name="days">
        <item>days</item>
        <item>day</item>
        <item>days</item>
    </string-array>
    <string-array name="hours">
        <item>hours</item>
        <item>hour</item>
        <item>hours</item>
    </string-array>
    <string-array name="minutes">
        <item>minutes</item>
        <item>minute</item>
        <item>minutes</item>
    </string-array>

</resources>