<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".JidelakActivity" >

    <item
        android:id="@+id/action_call"
        android:icon="@android:drawable/ic_menu_call"
        android:orderInCategory="10"
        android:title="@string/call"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_locate"
        android:icon="@android:drawable/ic_menu_directions"
        android:orderInCategory="100"
        android:title="@string/locate"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_delete"
        android:icon="@android:drawable/ic_menu_delete"
        android:orderInCategory="100"
        android:title="@string/delete"
        app:showAsAction="ifRoom"/>

</menu>